[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adoutils"
version = "0.1.0"
authors = [
    { name="Cristóbal Domínguez", email="cristobal.dominguez@latam.com" },
]
description = "ADO UTILS library for Bootcamp"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "num2words==0.5.12"
]

[project.urls]
"Homepage" = "https://github.com/cristobal790/ado-utils"
"Bug Tracker" = "https://github.com/cristobal790/ado-utils/issues"
